--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,41 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>9</version>
+    </parent>
 
     <groupId>io.japi</groupId>
     <artifactId>project</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <name>jAPI</name>
+    <description>
+        jAPI is a small set of annotations that can be used to described intended usage of API elements. With
+        these annotations it is possible to validate that a given codebase does not use the API incorrectly and measure
+        the amount of unstable API elements in use.
+    </description>
+    <url>https://github.com/peachjean/japi/</url>
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <name>Jared Bunting</name>
+            <email>jared@bunting.io</email>
+            <organizationUrl>http://bunting.io/</organizationUrl>
+        </developer>
+    </developers>
+    <scm>
+        <connection>scm:git:git@github.com:peachjean/japi.git</connection>
+        <developerConnection>scm:git:git@github.com:peachjean/japi.git</developerConnection>
+        <url>git@github.com:peachjean/japi.git</url>
+    </scm>
 
     <modules>
         <module>japi</module>
