--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <tagNameFormat>${version}</tagNameFormat>
+                    <tagNameFormat>@{project.version}</tagNameFormat>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
             </plugin>
