--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -37,7 +35,8 @@
         <connection>scm:git:git@github.com:peachjean/japi.git</connection>
         <developerConnection>scm:git:git@github.com:peachjean/japi.git</developerConnection>
         <url>git@github.com:peachjean/japi.git</url>
-    </scm>
+      <tag>release/0.1.x</tag>
+  </scm>
 
     <modules>
         <module>japi</module>
