[maven-release-plugin] prepare for next development iteration

--- a/japi/pom.xml
+++ b/japi/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>io.japi</groupId>
         <artifactId>project</artifactId>
-        <version>0.1.0</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
 
     <groupId>io.japi</groupId>
     <artifactId>japi</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.1-SNAPSHOT</version>
 
     
 </project>
