--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>io.japi</groupId>
     <artifactId>project</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>jAPI</name>
     <description>
@@ -35,7 +35,7 @@
         <connection>scm:git:git@github.com:peachjean/japi.git</connection>
         <developerConnection>scm:git:git@github.com:peachjean/japi.git</developerConnection>
         <url>git@github.com:peachjean/japi.git</url>
-      <tag>0.1.0</tag>
+      <tag>release/0.1.x</tag>
   </scm>
 
     <modules>
